--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <section class="content">
         <div class="title">
-          <p class="catg">Perfume</p>
+          <p class="catg">PERFUME</p>
           <h1>Gabrielle Essence Eau De Parfum</h1>
           <p class="desc">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
         </div>
